# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "request_client"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.115"
serde = { version = "1.0", features = ["derive"] }
samgr = { git = "https://gitee.com/openharmony/systemabilitymgr_samgr" }
ipc = { git = "https://gitee.com/openharmony/communication_ipc" }
ylong_runtime = { git = "https://gitee.com/openharmony/commonlibrary_rust_ylong_runtime", features = ["full"] }

request_utils = { path = "../../../common/utils" }
request_core = { path = "../../../common/request_core" }
