# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

ohos_rust_shared_library("cache_download_ani") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    all_ubsan = true
    debug = false
  }

  sources = [ "src/lib.rs" ]

  external_deps = [
    "netmanager_base:ani_rs",
    "runtime_core:ani",
    "hilog:libhilog",
    "hilog:hilog_rust",
  ]

  deps = [
    "../../../native/cache_download:preload_native_rlib",
    "//third_party/rust/crates/serde/serde:lib",
  ]

  clippy_lints = "none"

  subsystem_name = "request"
  part_name = "request"
  output_extension = "so"
}

generate_static_abc("cache_download") {
  base_url = "./ets"
  files = [ "ets/@ohos.request.cacheDownload.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/cache_download.abc"
}

ohos_prebuilt_etc("cache_download_etc") {
  source = "$target_out_dir/cache_download.abc"
  module_install_dir = "framework"
  subsystem_name = "request"
  part_name = "request"
  deps = [ ":cache_download" ]
}
