# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

rust_cxx("request_ani_cxx_gen") {
  sources = [ "src/wrapper.rs" ]
}

ohos_rust_shared_library("request_ani") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    all_ubsan = true
    debug = false
  }

  sources = [ "src/lib.rs" ]

  external_deps = [
    "netmanager_base:ani_rs",
    "runtime_core:ani",
    "hilog:hilog_rust",
  ]

  deps = [
    "../../../../common/request_core:request_core",
    "../../../../common/utils:request_utils",
    "../../../../common/utils:request_data_ability",
    "../../../native/request_next:request_client",
    "//third_party/rust/crates/serde/serde:lib",
  ]

  clippy_lints = "none"

  subsystem_name = "request"
  part_name = "request"
  output_extension = "so"
}

generate_static_abc("request") {
  base_url = "./ets"
  files = [ "ets/@ohos.request.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/request.abc"
}

ohos_prebuilt_etc("request_etc") {
  source = "$target_out_dir/request.abc"
  module_install_dir = "framework"
  subsystem_name = "request"
  part_name = "request"
  deps = [ ":request" ]
}
