# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("preload_napi_config") {
  include_dirs = [
    "include",
    "../../../../interfaces/inner_kits/cache_download/napi/include"
  ]
}

ohos_shared_library("preload_napi") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  public_configs = [ ":preload_napi_config" ]
  version_script = "libcache_download.map"

  sources = [
    "src/napi_utils.cpp",
    "src/preload_common.cpp",
    "src/preload_napi.cpp",
  ]
  deps = [
    "../../../native/cache_download:preload_native",
  ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:data_ability_helper",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_base_context",
    "c_utils:utils",
    "curl:curl_shared",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "napi:ace_napi",
    "rust_cxx:cxx_cppdeps",
  ]

  subsystem_name = "request"
  part_name = "request"
}
